# scoring-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_production_hardening.py  0003_stage3_platform.py  0004_stage4_product.py  0005_outbox_dedup_and_improvements.py  0006_schema_reconciliation.py  3da48f665662_stage6_ranking_evaluation.py  ac4ab5a2363a_stage7_workflow_orchestration.py  bb614cd4019d_stage5_adaptation_self_improving.py
docs/: SCHEMA_EVOLUTION.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Badge.tsx  Card.tsx  ErrorBoundary.tsx  Layout.tsx  MiniChart.tsx  Pagination.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Demo.tsx  Digests.tsx  Recommendations.tsx  Sources.tsx  TrendDetails.tsx  Trends.tsx
frontend/src/pages/adaptation/: AdaptationOverview.tsx  ExperimentsPage.tsx  GoalsPage.tsx  ProposalsPage.tsx  QualityPage.tsx  SourceTrustPage.tsx
src/scoring_service/: __init__.py  adaptation_contracts.py  analytics.py  audit.py  caps.py  circuit_breaker.py  config.py  contracts.py  correlation.py  diagnostics.py  executor.py  fallback.py  main.py  observability.py  platform_contracts.py  rate_limit.py  reviewer.py  scoring_engine.py  security.py  seed.py  serializer.py  source_protection.py  tracing.py  worker.py
src/scoring_service/adaptation/: __init__.py  adaptive_scoring_service.py  evaluation_service.py  experiment_service.py  feedback_service.py  goal_service.py  jobs.py  orchestrator.py  policy_tuning_service.py  repository.py  rollback_service.py  routes.py  seed.py  source_learning_service.py
src/scoring_service/admin/: routes.py
src/scoring_service/api/: app.py  dashboard.py  demo_api.py  llm_api.py  routes.py  sources_api.py
src/scoring_service/contracts_pkg/: __init__.py  platform.py  scoring.py
src/scoring_service/contracts_registry/: __init__.py  domain_contracts.py  registry.py  routes.py
src/scoring_service/db/: models.py  session.py
src/scoring_service/db/models_pkg/: __init__.py  _base.py  adaptation.py  core.py  evaluation.py  platform.py  product.py  workflows.py
src/scoring_service/demo/: __init__.py  runner.py  seed_data.py
src/scoring_service/domain/: __init__.py  fallback.py  scoring_engine.py
src/scoring_service/evaluation/: __init__.py  metrics.py  repository.py  routes.py  service.py
src/scoring_service/explanations/: service.py
src/scoring_service/exports/: service.py
src/scoring_service/failures/: service.py
src/scoring_service/idempotency/: service.py
src/scoring_service/infra/: __init__.py  circuit_breaker.py  correlation.py  diagnostics.py  observability.py  rate_limit.py  security.py
src/scoring_service/jobs/: service.py
src/scoring_service/llm/: __init__.py  base.py  mock_provider.py  openai_provider.py  prompts.py  service.py
src/scoring_service/outbox/: dispatcher.py  service.py
src/scoring_service/pipeline/: orchestrator.py
src/scoring_service/platform_api/: __init__.py  query.py  routes.py
src/scoring_service/plugins/: __init__.py  base.py  builtin.py  registry.py
src/scoring_service/policies/: engine.py  service.py
src/scoring_service/repos/: score_repo.py
src/scoring_service/services/: scoring_service.py
src/scoring_service/sources/: __init__.py  base.py  file_source.py  http_api_source.py  manager.py  reddit_source.py  rss_source.py
src/scoring_service/tenancy/: __init__.py  context.py  service.py
src/scoring_service/usage/: __init__.py  service.py
src/scoring_service/workflows/: __init__.py  definitions.py  engine.py  routes.py  scheduler.py
tests/: test_adaptation.py  test_api.py  test_caps.py  test_contracts.py  test_dashboard.py  test_data_contracts.py  test_demo_unit.py  test_evaluation.py  test_executor.py  test_hardening.py  test_llm_mock.py  test_main.py  test_migrations.py  test_platform.py  test_production_hardening.py  test_reviewer.py  test_scoring_engine.py  test_serializer.py  test_sources_unit.py  test_workflows.py
